[package]
name = "sandstorm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1"
winit = "0.26"
egui = "0.18.1"
env_logger = "0.9"
log = "0.4"
wgpu = "0.12"
pollster = "0.2"
bytemuck = { version = "1.4", features = [ "derive" ] }
anyhow = "1.0"
cgmath = "0.18"
tobj = { version = "3.2.1", features = [
    "async",
]}
instant = "0.1"

# Don't use default features because jpeg decoding with image doesn't work in WASM. But can enable for native builds
[dependencies.image]
version = "0.24"
features = ["png", "jpeg"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"


[lib]
crate-type = ["cdylib", "rlib"]
